x overflow fix take 10

--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@ overflow-x:hidden;
     z-index: -1;
     width:100%;
     height:100vh;
-    
-    position:absolute;
+
+    {/*position:absolute;*/}
 }
 
 
@@ -50,8 +50,9 @@ padding-left:10px
 
     @media screen  and (max-width:414px){
 
-        .home{
+.home{
 
-           overflow-y:hidden;
-        }
+    border:2px solid red;
+    overflow:clipped;
+}
     }
